Project

General

Profile

Actions

Bug #45992

closed

tasks.rgw_multi.tests.test_multipart_object_sync fails

Added by Kefu Chai almost 4 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite compression
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2020-06-14T10:11:45.946 INFO:tasks.rgw_multisite_tests:tasks.rgw_multi.tests.test_multipart_object_sync ... FAIL
...
2020-06-14T10:11:56.971 INFO:tasks.rgw_multisite_tests:======================================================================
2020-06-14T10:11:56.972 INFO:tasks.rgw_multisite_tests:FAIL: tasks.rgw_multi.tests.test_multipart_object_sync
2020-06-14T10:11:56.972 INFO:tasks.rgw_multisite_tests:----------------------------------------------------------------------
2020-06-14T10:11:56.972 INFO:tasks.rgw_multisite_tests:Traceback (most recent call last):
2020-06-14T10:11:56.973 INFO:tasks.rgw_multisite_tests:  File "/home/teuthworker/src/git.ceph.com_git_teuthology_master/virtualenv/lib/python3.6/site-packages/nose/case.py", line 198, in runTest
2020-06-14T10:11:56.973 INFO:tasks.rgw_multisite_tests:    self.test(*self.arg)
2020-06-14T10:11:56.974 INFO:tasks.rgw_multisite_tests:  File "/home/teuthworker/src/github.com_ceph_ceph_master/qa/tasks/rgw_multi/tests.py", line 1200, in test_multipart_object_sync
2020-06-14T10:11:56.974 INFO:tasks.rgw_multisite_tests:    zonegroup_bucket_checkpoint(zonegroup_conns, bucket.name)
2020-06-14T10:11:56.974 INFO:tasks.rgw_multisite_tests:  File "/home/teuthworker/src/github.com_ceph_ceph_master/qa/tasks/rgw_multi/tests.py", line 396, in zonegroup_bucket_checkpoint
2020-06-14T10:11:56.975 INFO:tasks.rgw_multisite_tests:    zone_bucket_checkpoint(target_conn.zone, source_conn.zone, bucket_name)
2020-06-14T10:11:56.975 INFO:tasks.rgw_multisite_tests:  File "/home/teuthworker/src/github.com_ceph_ceph_master/qa/tasks/rgw_multi/tests.py", line 388, in zone_bucket_checkpoint
2020-06-14T10:11:56.976 INFO:tasks.rgw_multisite_tests:    (target_zone.name, source_zone.name, bucket_name)
2020-06-14T10:11:56.976 INFO:tasks.rgw_multisite_tests:AssertionError: failed bucket checkpoint for target_zone=a2 source_zone=a1 bucket=zinpfd-50
2020-06-14T10:11:56.976 INFO:tasks.rgw_multisite_tests:
2020-06-14T10:11:56.977 INFO:tasks.rgw_multisite_tests:----------------------------------------------------------------------
2020-06-14T10:11:56.977 INFO:tasks.rgw_multisite_tests:Ran 28 tests in 1095.949s

rgw/multisite/{clusters.yaml frontend/beast.yaml omap_limits.yaml overrides.yaml realms/two-zonegroup.yaml tasks/test_multi.yaml valgrind.yaml}

/a//kchai-2020-06-14_09:06:58-rgw-master-distro-basic-smithi/5146110


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #49045: nautilus: tasks.rgw_multi.tests.test_multipart_object_sync failsResolvedActions
Copied to rgw - Backport #49046: octopus: tasks.rgw_multi.tests.test_multipart_object_sync failsResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Assignee set to Casey Bodley
  • Tags set to multisite
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
  • Tags changed from multisite to multisite compression
  • Pull request ID set to 37238
Actions #3

Updated by Casey Bodley over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to nautilus octopus
Actions #5

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49045: nautilus: tasks.rgw_multi.tests.test_multipart_object_sync fails added
Actions #6

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49046: octopus: tasks.rgw_multi.tests.test_multipart_object_sync fails added
Actions #7

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF